--- a/SaveMoney/WebContent/WEB-INF/web.xml
+++ b/SaveMoney/WebContent/WEB-INF/web.xml
@@ -34,7 +34,7 @@
   </servlet-mapping>
   <servlet>
     <servlet-name>cliente</servlet-name>
-    <servlet-class>br.com.dellectus.servlets.CategoriaController</servlet-class>
+    <servlet-class>br.com.dellectus.servlets.ClienteController</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>cliente</servlet-name>
