--- a/SaveMoney/WebContent/WEB-INF/web.xml
+++ b/SaveMoney/WebContent/WEB-INF/web.xml
@@ -8,6 +8,7 @@
     <servlet-name>fornecedor</servlet-name>
     <url-pattern>/FornecedorController</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>login</servlet-name>
     <servlet-class>com.amzi.servlets.LoginServlet</servlet-class>
@@ -16,6 +17,7 @@
     <servlet-name>login</servlet-name>
     <url-pattern>/loginServlet</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>employee</servlet-name>
     <servlet-class>br.com.dellectus.servlets.EmployeeController</servlet-class>
@@ -24,6 +26,7 @@
     <servlet-name>employee</servlet-name>
     <url-pattern>/employeeController.do</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>categoria</servlet-name>
     <servlet-class>br.com.dellectus.servlets.CategoriaController</servlet-class>
@@ -32,6 +35,7 @@
     <servlet-name>categoria</servlet-name>
     <url-pattern>/CategoriaController</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>cliente</servlet-name>
     <servlet-class>br.com.dellectus.servlets.ClienteController</servlet-class>
@@ -40,6 +44,34 @@
     <servlet-name>cliente</servlet-name>
     <url-pattern>/ClienteController</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>moduloRecebimento</servlet-name>
+    <servlet-class>br.com.dellectus.servlets.ModuloRecebimentoController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>moduloRecebimento</servlet-name>
+    <url-pattern>/ModuloRecebimentoController</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>notaFiscal</servlet-name>
+    <servlet-class>br.com.dellectus.servlets.NotaFiscalController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>notaFiscal</servlet-name>
+    <url-pattern>/NotaFiscalController</url-pattern>
+  </servlet-mapping>
+  
+    <servlet>
+    <servlet-name>usuario</servlet-name>
+    <servlet-class>br.com.dellectus.servlets.UsuarioController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>usuario</servlet-name>
+    <url-pattern>/UsuarioController</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
